Refactor drinks menu items in line with food menu code

--- a/drinks.html
+++ b/drinks.html
@@ -33,30 +33,77 @@
     <div id="hot-drinks">
         <h1>Caffe / Coffee</h1>
         <p>Coffee, Tea and Cakes Available from 9:30am</>
+            <section>
+                <div class="container">
+                    <!-- <div class="item text-left">Espresso</div>
+                    <div class="item">€3.00</div> -->
 
-        <div class="container">
-            <div class="item text-left">Espresso</div>
-            <div class="item">€3.00</div>
-            <div class="item text-left">Macchiato</div>
-            <div class="item">€3.00</div>
-            <div class="item text-left">Americano</div>
-            <div class="item">€3.00</div>
-            <div class="item text-left">Tea</div>
-            <div class="item">€3.00</div>
-            <div class="item description">Regular, Earl Gray, Green Tea, Peppermint, Black Chia, Lemon & Ginger,
-                Chamomile</div>
-            <div class="item"></div>
-            <div class="item text-left">Cappucino</div>
-            <div class="item">€3.30</div>
-            <div class="item text-left">Caffe Latte</div>
-            <div class="item">€3.30</div>
-            <div class="item text-left">Cioccolata Calda <span class="text-small">(Hot Chocolate)</span></div>
-            <div class="item">€3.30</div>
-            <div class="item text-left">Extra Shot</div>
-            <div class="item">+€1.00</div>
-            <div class="item text-left">Latte D'Avena <span class="text-small">(Oat Milk)</span></div>
-            <div class="item">+€1.00</div>
-        </div>
+                    <div class="item-row">
+                        <div class="text-left">Espresso</div>
+                        <div class="price">€3.00</div>
+                    </div>
+
+                    <!-- <div class="item text-left">Macchiato</div>
+                    <div class="item">€3.00</div> -->
+                    <div class="item-row">
+                        <div class="text-left">Macchiato</div>
+                        <div class="price">€3.00</div>
+                    </div>
+                    <!-- <div class="item text-left">Americano</div>
+                    <div class="item">€3.00</div> -->
+                    <div class="item-row">
+                        <div class="text-left">Americano</div>
+                        <div class="price">€3.00</div>
+                    </div>
+                    <!-- <div class="item text-left">Tea</div>
+                    <div class="item">€3.00</div>
+                    <div class="item description"></div> -->
+                    <div class="text-left">Tea</div>
+                    <div class="price">€3.00</div>
+                </div>
+                <div class="item-row description">Regular, Earl Gray, Green Tea, Peppermint, Black Chia, Lemon & Ginger,
+                </div>
+                <!-- <div class="item text-left">Cappucino</div>
+                    <div class="item">€3.30</div> -->
+                <div class="item-row">
+                    <div class="text-left">Cappucino</div>
+                    <div class="price">€3.00</div>
+                </div>
+                <div class="item-row">
+                    <div class="text-left">Caffe Latte</div>
+                    <div class="price">€3.30</div>
+                </div>
+                <!-- </div>
+                    <div class="item text-left">Caffe Latte</div>
+                    <div class="item">€3.30</div> -->
+                <!-- <div class="item text-left"> <span class="text-small">(Hot Chocolate)</span></div>
+                    <div class="item">€3.30</div>
+                     -->
+                <!-- <div class="item-row">
+                    <div class="text-left"></div>
+                    <div class="price">€3.30</div>
+                    <div class="item-row description">Hot Chocolate</div>
+                </div> -->
+
+                <!-- hc -->
+                <div class="item-row">
+                    <div class="text-left">Cioccolata Calda</div>
+                    <div class="price">€3.30</div>
+                </div>
+                <div class="item-row description">Hot Chocolate</div>
+
+                <div class="item-row">
+                    <div class="text-left">Extra Shot</div>
+                    <div class="price">+€1.00</div>
+                </div>
+    </div>
+    <div class="item-row">
+        <div class="text-left">Latte D'Avena</div>
+        <div class="price">+€1.00</div>
+    </div>
+    <div class="item-row description">Oat Milk</div>
+
+    </section>
     </div>
     <footer>
         <P class="footer">Royal Parade,<br> Killaloe,<br> Co.Clare</P>
@@ -75,7 +122,7 @@
             </li>
         </ul>
     </footer>
-    
+
     <script src="https://kit.fontawesome.com/9906bd50db.js" crossorigin="anonymous"></script>
 </body>
 
