--- a/food.html
+++ b/food.html
@@ -2,30 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <!--Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <!--Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
-    <title>Food</title>
+  <title>Food</title>
 </head>
 
 <body>
-    <header>
-        <nav class="navbar">
-            <ul class="nav-menu" id="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="food.html">Food Menu</a></li>
-                <li><a href="drinks.html">Drinks Menu</a></li>
-                <li><a href="feedback.html">Feedback</a></li>
-            </ul>
-        </nav>
-    </header>
-<!-- 
+  <header>
+    <nav class="navbar">
+      <ul class="nav-menu" id="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="food.html">Food Menu</a></li>
+        <li><a href="drinks.html">Drinks Menu</a></li>
+        <li><a href="feedback.html">Feedback</a></li>
+      </ul>
+    </nav>
+  </header>
+  <!-- 
     <section id="food-menu-block">
         <div id="light-menu">
             <h1> Light Bites</h1>
@@ -72,82 +72,84 @@
                 <div class="item"></div>
             </div>
     </section> -->
-    <section id="food-menu-block">
-        <div id="light-menu">
-          <h1>Light Bites</h1>
-          <div id="light-bites" class="container">
-            <div class="item-row">
-              <div class="text-left">Marinated Olives</div>
-              <div class="price">€5.00</div>
-            </div>
-            <div class="item-row">
-              <div class="text-left">Italian Crisps</div>
-              <div class="price">€5.00</div>
-            </div>
-            <div class="item-row">
-              <div class="text-left">Garlic Bread</div>
-              <div class="price">€7.00</div>
-            </div>
-            <div class="item-row">
-              <div class="text-left">Minestrone Soup</div>
-              <div class="price">€8.00</div>
-            </div>
-            <div class="item-row description">Tomato based soup with cannellini beans, peas & pasta served with toasted bread.</div>
-            <div class="item-row">
-              <div class="text-left">Bruschetta</div>
-              <div class="price">€9.00</div>
-            </div>
-            <div class="item-row description">Toasted Italian bread with olive oil, garlic, sundried tomato, rocket & parmagiano.</div>
-          </div>
+  <section id="food-menu-block">
+    <div id="light-menu">
+      <h1>Light Bites</h1>
+      <div id="light-bites" class="container">
+        <div class="item-row">
+          <div class="text-left">Marinated Olives</div>
+          <div class="price">€5.00</div>
         </div>
-      
-        <div id="food-sandwiches" class="container">
-          <h1>Food Sandwiches</h1>
-          <div class="item-row">
-            <div class="text-left">Ciabatta</div>
-            <div class="price">€9.00</div>
-          </div>
-          <div class="item-row">
-            <div class="text-left">Ham Ciabatta</div>
-            <div class="price">€10.00</div>
-          </div>
-          <div class="item-row description">Ham, mozzarella & sundried tomatoes.</div>
-          <div class="item-row">
-            <div class="text-left">Tuna Ciabatta</div>
-            <div class="price">€10.00</div>
-          </div>
-          <div class="item-row description">Tuna, onion, mozzarella, & sundried tomatoes.</div>
-          <div class="item-row">
-            <div class="text-left">Mixed Veg Ciabatta</div>
-            <div class="price">€10.00</div>
-          </div>
-          <div class="item-row description">Artichokes, mushroom, onion, mozzarella & sundried tomatoes.</div>
-          <div class="item-row">
-            <div class="text-left">Pizza Ciabatta</div>
-            <div class="price">€11.00</div>
-          </div>
-          <div class="item-row description">Pizza sauce, mozzarella & pepperoni (more toppings available).</div>
+        <div class="item-row">
+          <div class="text-left">Italian Crisps</div>
+          <div class="price">€5.00</div>
         </div>
-      </section>
-    <footer>
-        <P class="footer">Royal Parade,<br> Killaloe,<br> Co.Clare</P>
-        <ul id="social-networks">
-            <li>
-                <a href="http://www.facebook.com/PonteVecchioKillaloe" target="_blank" rel="noopener"
-                    aria-label="Visit our facebook page (opens in  a new tab)">
-                    <i class="fa-brands fa-facebook"></i>
-                </a>
-            </li>
-            <li>
-                <a href="http://www.instagram.com/ponte_vecchio_killaloe" target="_blank" rel="noopener"
-                    aria-label="Visit our instagram channel (opens in new tab)">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-            </li>
-        </ul>
-    </footer>
-    
-    <script src="https://kit.fontawesome.com/9906bd50db.js" crossorigin="anonymous"></script>
+        <div class="item-row">
+          <div class="text-left">Garlic Bread</div>
+          <div class="price">€7.00</div>
+        </div>
+        <div class="item-row">
+          <div class="text-left">Minestrone Soup</div>
+          <div class="price">€8.00</div>
+        </div>
+        <div class="item-row description">Tomato based soup with cannellini beans, peas & pasta served with toasted
+          bread.</div>
+        <div class="item-row">
+          <div class="text-left">Bruschetta</div>
+          <div class="price">€9.00</div>
+        </div>
+        <div class="item-row description">Toasted Italian bread with olive oil, garlic, sundried tomato, rocket &
+          parmagiano.</div>
+      </div>
+    </div>
+
+    <div id="food-sandwiches" class="container">
+      <h1>Sandwiches</h1>
+      <div class="item-row">
+        <div class="text-left">Ciabatta</div>
+        <div class="price">€9.00</div>
+      </div>
+      <div class="item-row">
+        <div class="text-left">Ham Ciabatta</div>
+        <div class="price">€10.00</div>
+      </div>
+      <div class="item-row description">Ham, mozzarella & sundried tomatoes.</div>
+      <div class="item-row">
+        <div class="text-left">Tuna Ciabatta</div>
+        <div class="price">€10.00</div>
+      </div>
+      <div class="item-row description">Tuna, onion, mozzarella, & sundried tomatoes.</div>
+      <div class="item-row">
+        <div class="text-left">Mixed Veg Ciabatta</div>
+        <div class="price">€10.00</div>
+      </div>
+      <div class="item-row description">Artichokes, mushroom, onion, mozzarella & sundried tomatoes.</div>
+      <div class="item-row">
+        <div class="text-left">Pizza Ciabatta</div>
+        <div class="price">€11.00</div>
+      </div>
+      <div class="item-row description">Pizza sauce, mozzarella & pepperoni (more toppings available).</div>
+    </div>
+  </section>
+  <footer>
+    <P class="footer">Royal Parade,<br> Killaloe,<br> Co.Clare</P>
+    <ul id="social-networks">
+      <li>
+        <a href="http://www.facebook.com/PonteVecchioKillaloe" target="_blank" rel="noopener"
+          aria-label="Visit our facebook page (opens in  a new tab)">
+          <i class="fa-brands fa-facebook"></i>
+        </a>
+      </li>
+      <li>
+        <a href="http://www.instagram.com/ponte_vecchio_killaloe" target="_blank" rel="noopener"
+          aria-label="Visit our instagram channel (opens in new tab)">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+      </li>
+    </ul>
+  </footer>
+
+  <script src="https://kit.fontawesome.com/9906bd50db.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
