fix validator issues

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
         </nav>
-        <section id="hero-main" class="hero-main">
+        <div id="hero-main" class="hero-main">
             <div id="hero-div">
             </div>
-        </section>
+        </div>
     </header>
     <section id="welcome">
         <div id="food">
-            <h2 id="">Welcome to Ponte Vecchio Bistro and Bar, Killaloe</h2>
+            <h2>Welcome to Ponte Vecchio Bistro and Bar, Killaloe</h2>
             <p> At Ponte Vecchio, we take pride in offering a
                 delightful culinary experience that combines the best of traditional
                 and contemporary cuisine. Nestled in the picturesque town of Killaloe,
@@ -48,7 +48,6 @@
                 locally-sourced ingredients, delectable bruschetta to hearty mouth-watering soups serverd with fresh
                 italian bread,
                 every bite promises to transport you to the heart of Italy.</p>
-            </p>
         </div>
     </section>
     <section id="drinks">
