fix w3c errors found on drinks page

--- a/drinks.html
+++ b/drinks.html
@@ -25,13 +25,13 @@
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
         </nav>
-        <section id="hero-drinks" class="drinks">
+        <div id="hero-drinks" class="drinks">
             <div id="hero-div">
             </div>
-        </section>
+        </div>
     </header>
     <div id="hot-drinks">
-        <h1>Caffe / Coffee</h1>
+        <h1>Caffe &lt/ Coffee</h1>
         <p>Coffee, Tea and Cakes Available from 9:30am</>
             <section>
                 <div class="container">
@@ -96,14 +96,13 @@
                     <div class="text-left">Extra Shot</div>
                     <div class="price">+€1.00</div>
                 </div>
-    </div>
-    <div class="item-row">
-        <div class="text-left">Latte D'Avena</div>
-        <div class="price">+€1.00</div>
-    </div>
-    <div class="item-row description">Oat Milk</div>
+                <div class="item-row">
+                    <div class="text-left">Latte D'Avena</div>
+                    <div class="price">+€1.00</div>
+                </div>
+                <div class="item-row description">Oat Milk</div>
 
-    </section>
+            </section>
     </div>
     <footer>
         <P class="footer">Royal Parade,<br> Killaloe,<br> Co.Clare</P>
