fix code flagged by validator

--- a/drinks.html
+++ b/drinks.html
@@ -31,7 +31,7 @@
         </div>
     </header>
     <div id="hot-drinks">
-        <h1>Caffe &lt/ Coffee</h1>
+        <h1>Caffe - Coffee</h1>
         <p>Coffee, Tea and Cakes Available from 9:30am</>
             <section>
                 <div class="container">
