--- a/drinks.html
+++ b/drinks.html
@@ -33,7 +33,7 @@
     <div id="hot-drinks">
         <h1>Caffe - Coffee</h1>
         <p>Coffee, Tea and Cakes Available from 9:30am</>
-            <section>
+            <section id="drinks-menu-block-1">
                 <div class="container">
                     <!-- <div class="item text-left">Espresso</div>
                     <div class="item">€3.00</div> -->
