fix closing tag on drinks menu

--- a/drinks.html
+++ b/drinks.html
@@ -32,7 +32,7 @@
     </header>
     <div id="hot-drinks">
         <h1>Caffe - Coffee</h1>
-        <p>Coffee, Tea and Cakes Available from 9:30am</>
+        <p>Coffee, Tea and Cakes Available from 9:30am</p>
             <section id="drinks-menu-block-1">
                 <div class="container">
                     <!-- <div class="item text-left">Espresso</div>
