--- a/drinks.html
+++ b/drinks.html
@@ -31,9 +31,10 @@
         </div>
     </header>
     <div id="hot-drinks">
-        <h1>Caffe - Coffee</h1>
+        <h1>Drinks</h1>
         <p>Coffee, Tea and Cakes Available from 9:30am</p>
             <section id="drinks-menu-block-1">
+                <h2>Hot Drinks</h2>
                 <div class="container">
                     <!-- <div class="item text-left">Espresso</div>
                     <div class="item">€3.00</div> -->
