add formatting to thank you page

--- a/feedback.html
+++ b/feedback.html
@@ -34,7 +34,7 @@
     <div id="feedback-page">
 
         <div id="feedback-form">
-            <form action="thanks.html" method="get">
+            <form action="thankyou.html" method="get">
                 <h2>Let us know what you think</h2>
                 <div class="form-item">
                      <label for="name"> Name:</label>
