--- a/thanks.html
+++ b/thanks.html
@@ -7,9 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>Thank you for your Feedback,</h1>
-    <h2>We hope to see you again soon!</h2>
-    <a href="index.html" id="close">Close</a> 
+    <div id="thanks-text">  <h1>Thank you for your Feedback,</h1>
+    <h2>goodbye</h2>
+    <a href="index.html" id="close">Close</a> </div>
+ 
 
 </body>
 </html>
