--- a/thankyou.html
+++ b/thankyou.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <title>Thank You</title>
 </head>
-<body><head>Thank you For our Feedback</head>
-    <p>We hope to see you again soon.</p>
-    <footer><a href="index.html">Take me back home.</a></footer>
+<body><h1>Thank you For our Feedback</h1>
+   <div id="thanks-text"><p>We hope to see you again soon.</p>
+    <footer><a href="index.html">Take me back home.</a></footer></div> 
 </body>
 </html>
