add styling to thankyou

--- a/thankyous.html
+++ b/thankyous.html
@@ -7,7 +7,7 @@
     <title>Thank You</title>
 </head>
 <body><h1>Thank you For our Feedback</h1>
-   <div id="thanks-text"><p>We hope to see you again soon.</p>
+   <div id="t-text"><p>We hope to see you again soon.</p>
     <footer><a href="index.html">Take me back home.</a></footer></div> 
 </body>
 </html>
