--- a/thanks.html
+++ b/thanks.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Document</title>
 </head>
+
 <body>
-    <div id="thanks-text">  <h1>Thank you for your Feedback,</h1>
-    <h2>goodbye</h2>
-    <a href="index.html" id="close">Close</a> </div>
- 
+    <div id="thanks-text">
+        <h1>Thank you for your Feedback,</h1>
+        <h2>goodbye</h2>
+        <a href="index.html" id="close">Close</a>
+    </div>
+
 
 </body>
+
 </html>
