fix placeholder text alignment

--- a/feedback.html
+++ b/feedback.html
@@ -34,7 +34,7 @@
     <div id="feedback-page">
 
         <div id="feedback-form">
-            <form action="thankyou.html" method="get">
+            <form action="thanks.html" method="get">
                 <h2>Let us know what you think</h2>
                 <div class="form-item">
                      <label for="name"> Name:</label>
@@ -42,11 +42,11 @@
                 </div>
                 <div class="form-item">
                     <label for="email"> Email:</label>
-                    <input type="email" name="email" id="email" class="textbox" placeholder="Enter valid email address">
+                    <input type="email" name="email" id="email" class="textbox" required placeholder="Enter valid email address">
                 </div>
                 <div class="form-item form-align-top">
                     <label for="comments">Comments</label>
-                    <textarea name="comments" id="comments" rows="5" class="textbox"placeholder="Did you love us? We hope you did!"></textarea>
+                    <textarea name="comments" id="comments" rows="5" class="textbox" placeholder="Did you love us? We hope you did!" required></textarea>
                 </div>
                 <div id="button-div">
                     <button type="submit">Submit</button>
