--- a/thanks.html
+++ b/thanks.html
@@ -10,9 +10,10 @@
 
 <body>
     <div id="thanks-text">
-        <h1>Thank you for your Feedback,</h1>
-        <h2>goodbye</h2>
-        <a href="index.html" id="close">Close</a>
+        <h1>Thank you for your Feedback</h1>
+        <h2>We Hope To See You Again Soon</h2>
+        
+        <p><a href="index.html" id="Close">Close</a></p>
     </div>
 
 
