--- a/thankyous.html
+++ b/thankyous.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Thank You</title>
 </head>
-<body><h1>Thank you For our Feedback</h1>
+<body><h1>Thank you For Your Feedback</h1>
    <div id="t-text"><p>We hope to see you again soon.</p>
     <footer><a href="index.html">Take me back home.</a></footer></div> 
 </body>
