add text to drinks and deli sections

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Favicon -->
+    <!--Favicon created and coded on favicon.io-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
@@ -17,6 +17,7 @@
 
 <body>
     <header>
+        <!-- navigation menu -->
         <nav class="navbar">
             <ul class="nav-menu" id="menu">
                 <li><a href="index.html">Home</a></li>
@@ -42,7 +43,7 @@
             <img id="food-home-img" src="assets/images/pizza1.webp" alt="Sour dough pepperoni pizza on chopping board">
 
 
-            <h2>Savor the Flavors of Italy</h2>
+            <h2 id="flavours">Savor the Flavours of Italy</h2>
             <p>Step into a world of authentic Italian flavors with our meticulously
                 crafted menu. From classic sour-dough pizzas topped with fresh,
                 locally-sourced ingredients, delectable bruschetta to hearty mouth-watering soups serverd with fresh
@@ -52,12 +53,33 @@
     </section>
     <section id="drinks">
         <h2>Drinks Intro Section</h2>
+        <p>At the Ponte Vecchio Cafe, nestled in Killaloe, you can savor a delightful array of traditional Italian
+            drinks. From the rich and robust flavors of espresso and cappuccino to the refreshing zest of Aperol Spritz
+            and Limoncello, the cafe offers a true taste of Italy. Enjoy classic cocktails like Negroni or indulge in a
+            selection of fine Italian wines, all while soaking in the historic ambiance of this charming location. Each
+            drink at the Ponte Vecchio Cafe embodies the essence of Italian culture and craftsmanship, making it a
+            perfect spot to experience authentic Italian beverages.</p>
     </section>
-    <section id="books"> <h3>Books at Ponte Vecchio</h3>
-        <img src="assets/images/" alt="">
+    <section id="books">
+        <h3>Secondhand Books and Deli at Ponte Vecchio Cafe</h3>
+        <p>Ponte Vecchio Cafe isn't just a haven for lovers of Italian drinks, it's also a treasure trove for enthusiasts
+        of secondhand books and gourmet delights. As you sip your espresso or Aperol Spritz, you can browse through a
+        curated collection of secondhand books, each with its own unique history and charm. The shelves are filled with
+        a variety of genres, offering something for every reader.</p>
+
+            <h4>Delicatessen</h4>
+
+        <p>In addition to literary finds, the cafe boasts a delightful deli section. Here, you can indulge in a selection
+        of artisanal cheeses, cured meats, fresh bread, and other gourmet treats. Whether you're looking to enjoy a
+        light snack with your coffee or gather supplies for a picturesque picnic by the Arno River, the deli offers a
+        range of high-quality, locally sourced products. The combination of secondhand books and a fine deli creates a
+        uniquely cozy and enriching experience at Ponte Vecchio Cafe.
+    </p>
     </section>
     <footer>
-        <div id="address"><P class="footer">Royal Parade,<br> Killaloe,<br> Co.Clare</P></div>
+        <div id="address">
+            <P class="footer">Royal Parade,<br> Killaloe,<br> Co.Clare</P>
+        </div>
         <ul id="social-networks">
             <li>
                 <a href="http://www.facebook.com/PonteVecchioKillaloe" target="_blank" rel="noopener"
@@ -73,7 +95,7 @@
             </li>
         </ul>
     </footer>
-    
+    <!-- Font awesome social media icons -->
     <script src="https://kit.fontawesome.com/9906bd50db.js" crossorigin="anonymous"></script>
 </body>
 
