add image to food menu hero block

--- a/food.html
+++ b/food.html
@@ -24,6 +24,11 @@
         <li><a href="feedback.html">Feedback</a></li>
       </ul>
     </nav>
+    
+    <div id="hero-food" class="hero-food">
+      <div id="hero-div">
+      </div>
+  </div>
   </header>
 
   <section id="food-menu-block">
