remove commented out code

--- a/drinks.html
+++ b/drinks.html
@@ -33,39 +33,28 @@
     <div id="hot-drinks">
         <h1>Drinks</h1>
         <p>Coffee, Tea and Cakes Available from 9:30am</p>
-            <section id="drinks-menu-block-1">
-                <h2>Hot Drinks</h2>
-                <div class="container">
-                    <!-- <div class="item text-left">Espresso</div>
-                    <div class="item">€3.00</div> -->
-
-                    <div class="item-row">
-                        <div class="text-left">Espresso</div>
-                        <div class="price">€3.00</div>
-                    </div>
-
-                    <!-- <div class="item text-left">Macchiato</div>
-                    <div class="item">€3.00</div> -->
-                    <div class="item-row">
-                        <div class="text-left">Macchiato</div>
-                        <div class="price">€3.00</div>
-                    </div>
-                    <!-- <div class="item text-left">Americano</div>
-                    <div class="item">€3.00</div> -->
-                    <div class="item-row">
-                        <div class="text-left">Americano</div>
-                        <div class="price">€3.00</div>
-                    </div>
-                    <!-- <div class="item text-left">Tea</div>
-                    <div class="item">€3.00</div>
-                    <div class="item description"></div> -->
+        <section id="drinks-menu-block-1">
+            <h2>Hot Drinks</h2>
+            <div class="container">
+                <div class="item-row">
+                    <div class="text-left">Espresso</div>
+                    <div class="price">€3.00</div>
+                </div>
+                <div class="item-row">
+                    <div class="text-left">Macchiato</div>
+                    <div class="price">€3.00</div>
+                </div>
+                <div class="item-row">
+                    <div class="text-left">Americano</div>
+                    <div class="price">€3.00</div>
+                </div>
+                <div class="item-row">
                     <div class="text-left">Tea</div>
                     <div class="price">€3.00</div>
                 </div>
-                <div class="item-row description">Regular, Earl Gray, Green Tea, Peppermint, Black Chia, Lemon & Ginger,
+                 <div class="item-row description">Regular, Earl Gray, Green Tea,<br> Peppermint, Black Chia, Lemon &
+                        Ginger.</div> 
                 </div>
-                <!-- <div class="item text-left">Cappucino</div>
-                    <div class="item">€3.30</div> -->
                 <div class="item-row">
                     <div class="text-left">Cappucino</div>
                     <div class="price">€3.00</div>
@@ -74,18 +63,6 @@
                     <div class="text-left">Caffe Latte</div>
                     <div class="price">€3.30</div>
                 </div>
-                <!-- </div>
-                    <div class="item text-left">Caffe Latte</div>
-                    <div class="item">€3.30</div> -->
-                <!-- <div class="item text-left"> <span class="text-small">(Hot Chocolate)</span></div>
-                    <div class="item">€3.30</div>
-                     -->
-                <!-- <div class="item-row">
-                    <div class="text-left"></div>
-                    <div class="price">€3.30</div>
-                    <div class="item-row description">Hot Chocolate</div>
-                </div> -->
-
                 <!-- hc -->
                 <div class="item-row">
                     <div class="text-left">Cioccolata Calda</div>
@@ -103,7 +80,7 @@
                 </div>
                 <div class="item-row description">Oat Milk</div>
 
-            </section>
+        </section>
     </div>
     <footer>
         <P class="footer">Royal Parade,<br> Killaloe,<br> Co.Clare</P>
