--- a/index.html
+++ b/index.html
@@ -81,17 +81,13 @@
             <P class="footer">Royal Parade,<br> Killaloe,<br> Co.Clare</P>
         </div>
         <ul id="social-networks">
-            <li>
-                <a href="http://www.facebook.com/PonteVecchioKillaloe" target="_blank" rel="noopener"
+            <li><a href="http://www.facebook.com/PonteVecchioKillaloe" target="_blank" rel="noopener"
                     aria-label="Visit our facebook page (opens in  a new tab)">
-                    <i class="fa-brands fa-facebook"></i>
-                </a>
+                    <i class="fa-brands fa-facebook"></i></a>
             </li>
-            <li>
-                <a href="http://www.instagram.com/ponte_vecchio_killaloe" target="_blank" rel="noopener"
+            <li><a href="http://www.instagram.com/ponte_vecchio_killaloe" target="_blank" rel="noopener"
                     aria-label="Visit our instagram channel (opens in new tab)">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
+                    <i class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
     </footer>
