--- a/feedback.html
+++ b/feedback.html
@@ -28,33 +28,36 @@
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
         </nav>
-    </header><section id="main">
-    <h1>Heres what Others Have to say About Us
-    </h1>
-    <div id="feedback-page">
+    </header>
+    <section id="main">
+        <h1>Heres what Others Have to say About Us
+        </h1>
+        <div id="feedback-page">
 
-        <div id="feedback-form">
-            <form action="thankyous.html" method="get">
-                <h2>Let us know what you think</h2>
-                <div class="form-item">
-                     <label for="name"> Name:</label>
-                    <input type="text" name="name" id="name" class="textbox" required placeholder="Antonio Marion">
-                </div>
-                <div class="form-item">
-                    <label for="email"> Email:</label>
-                    <input type="email" name="email" id="email" class="textbox" required placeholder="Enter valid email address">
-                </div>
-                <div class="form-item form-align-top">
-                    <label for="comments">Comments</label>
-                    <textarea name="comments" id="comments" rows="5" class="textbox" placeholder="Did you love us? We hope you did!" required></textarea>
-                </div>
-                <div id="button-div">
-                    <button type="submit">Submit</button>
-                </div>
-            </form>
-        
-    </div>
-</section>
+            <div id="feedback-form">
+                <form action="thankyous.html" method="get">
+                    <h2>Let us know what you think</h2>
+                    <div class="form-item">
+                        <label for="name"> Name:</label>
+                        <input type="text" name="name" id="name" class="textbox" required placeholder="Antonio Marion">
+                    </div>
+                    <div class="form-item">
+                        <label for="email"> Email:</label>
+                        <input type="email" name="email" id="email" class="textbox" required
+                            placeholder="Enter valid email address">
+                    </div>
+                    <div class="form-item form-align-top">
+                        <label for="comments">Comments</label>
+                        <textarea name="comments" id="comments" rows="5" class="textbox"
+                            placeholder="Did you love us? We hope you did!" required></textarea>
+                    </div>
+                    <div id="button-div">
+                        <button type="submit">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
     <footer>
         <P class="footer">Royal Parade,<br> Killaloe,<br> Co.Clare</P>
         <ul id="social-networks">
@@ -72,7 +75,7 @@
             </li>
         </ul>
     </footer>
-    
+
     <script src="https://kit.fontawesome.com/9906bd50db.js" crossorigin="anonymous"></script>
 </body>
 
