--- a/drinks.html
+++ b/drinks.html
@@ -25,6 +25,7 @@
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
         </nav>
+        <!-- hero banner -->
         <div id="hero-drinks" class="drinks">
             <div id="hero-div">
             </div>
@@ -35,7 +36,7 @@
         <p>Coffee, Tea and Cakes Available from 9:30am</p>
         <section id="drinks-menu-block-1">
             <h2>Hot Drinks</h2>
-            <div class="container">
+            <!--holder for menu items --><div class="container"> 
                 <div class="item-row">
                     <div class="text-left">Espresso</div>
                     <div class="price">€3.00</div>
@@ -63,7 +64,7 @@
                     <div class="text-left">Caffe Latte</div>
                     <div class="price">€3.30</div>
                 </div>
-                <!-- hc -->
+               
                 <div class="item-row">
                     <div class="text-left">Cioccolata Calda</div>
                     <div class="price">€3.30</div>
